@@ -94,6 +94,8 @@ version ? (????-??-??):
   - added fiber link type and changed link type selection from checkbox to combobox [chilan]
   - teryt streets containing two segments support [chilan]
   - added link speed for netlinks and nodelinks [chilan]
+  - additional tariff types to select (phone, tv) [chilan]
+  - uke report support for service types [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
